# configparser

./: CMakeLists.txt  README.md
example/: main.cpp
include/: configparser.h  error_code.h  option_type.h  section_type.h  token.h  tokenizer.h  utils.h  value_parser.h  value_type.h
src/: configparser.cpp  option_type.cpp  section_type.cpp  tokenizer.cpp  utils.cpp  value_parser.cpp  value_type.cpp
